--- a/index.html
+++ b/index.html
@@ -692,35 +692,6 @@ h2 {
   opacity: 0.8;
 }
 
-  @media (max-width: 767px) {
-
-  /* 共通設定（流れ・料金と揃える） */
-  .contact-title,
-  .self-title {
-    position: relative;
-    padding-right: 30px;
-    cursor: pointer;
-  }
-
-  /* 矢印（閉じている時） */
-  .contact-title::after,
-  .self-title::after {
-    content: "∨";
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 0.9em;
-    color: #9F987D;
-    transition: transform 0.3s ease;
-  }
-
-  /* 開いている時 */
-  .contact-title.active::after,
-  .self-title.active::after {
-    content: "∧";
-  }
-}
 /* =================================================
    フッター
 ================================================= */
@@ -907,9 +878,10 @@ footer {
   お問い合わせ
 </h2>
 
-  <div class="contact-cta">
-  <a href="#" id="contact-cta-btn">お問い合わせはこちら</a>
-</div>
+<button class="toggle-button料金 sp-only" onclick="toggleContentContact()">
+  お問い合わせ
+  <span class="arrow料金">∨</span>
+</button>
 
 <section id="contact-section" class="contact-form">
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSci9ClyPaBeHyqKnsIpgh6nGqeLRpV-x8E1sJ7C8qhSyth11Q/viewform?embedded=true" width="100%" height="700">
@@ -1117,30 +1089,11 @@ window.toggleContent料金 = function () {
   }
 };
 /* ======================
-   トグル（お問い合わせ）
+   トグル（問い合わせ）
 ====================== */
 window.toggleContentContact = function () {
   const content = document.getElementById('contact-section');
-  const arrow = document.querySelector('.arrow-contact');
-
-  if (!content || !arrow) return;
-
-  const opening = !content.classList.contains('show');
-  content.classList.toggle('show');
-  arrow.classList.toggle('rotate');
-
-  if (opening) {
-    setTimeout(() => {
-      content.scrollIntoView({ behavior: 'smooth', block: 'center' });
-    }, 200);
-  }
-};
-  /* ======================
-   トグル（自己評価）
-====================== */
-window.toggleContentSelf = function () {
-  const content = document.getElementById('self-content');
-  const arrow = document.querySelector('.arrow-self');
+  const arrow = document.querySelector('.toggle-button料金.sp-only .arrow料金');
 
   if (!content || !arrow) return;
 
