--- a/index.html
+++ b/index.html
@@ -896,10 +896,20 @@ footer {
 </button>
 
 <div id="self-content" class="content料金">
-  <div class="pdf-section">
-    <a href="自己評価.html" target="_blank" class="pdf-link">
-      自己評価一覧（PDF）
+  <div class="pdf-section self-buttons">
+
+    <a href="自己評価_2023.pdf" target="_blank" class="pdf-link">
+      2023年度 自己評価
     </a>
+
+    <a href="自己評価_2024.pdf" target="_blank" class="pdf-link">
+      2024年度 自己評価
+    </a>
+
+    <a href="自己評価_2025.pdf" target="_blank" class="pdf-link">
+      2025年度 自己評価
+    </a>
+
   </div>
 </div>
 
