--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ h2 {
   justify-content: center;
 
   aspect-ratio: 1 / 1;   /* ← 正方形の決め手 */
-  width: 70%;
+  width: 60px;
 
   background: #ffffff;
   border-radius: 16px;
