--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ h2 {
   .self-buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 14px;
+  gap: 10px;
 }
 
   .self-buttons .pdf-link {
@@ -938,6 +938,11 @@ footer {
       2025年度 自己評価
     </a>
 
+    <a href="自己評価_2026.pdf" target="_blank" class="pdf-link">
+      2026年度 自己評価
+    </a>
+
+    
   </div>
 </div>
 
