--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@ h2 {
   content: "";
   position: absolute;
   bottom: -1px;
-  width: 1100px;
+  width: 100%;
+  max-width: 1100px;
   height: 0.8em;
   background: rgba(169,169,169,0.25);
   z-index: -1;
@@ -456,31 +457,6 @@ h2 {
   color: #635656;
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
-  
-.access-title {
-  width: 100%;
-  text-align: center;
-  font-size: 1.6em;
-  font-family: 'Kiwi Maru', cursive;
-  color: #8b8484;
-  position: relative;
-  display: block;
-  margin-bottom: 30px;
-  font-weight: 300;
-}
-
-.access-title::before {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  width: 1100px;
-  height: 0.8em;
-  background: rgba(169,169,169,0.25);
-  z-index: -1;
-  border-radius: 15px;
-  left: -10%;
-  transform: none;
-}
 
   @media (max-width: 480px) {
   .access-title {
@@ -549,31 +525,6 @@ h2 {
 /* =================================================
    お問い合わせ
 ================================================= */
-.contact-title {
-  width: 100%;
-  text-align: center;
-  font-size: 1.6em;
-  font-family: 'Kiwi Maru', cursive;
-  color: #8b8484;
-  position: relative;
-  display: block;
-  margin-bottom: 30px;
-  font-weight: 300;
-}
-
-.contact-title::before {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  width: 1100px;
-  height: 0.8em;
-  background: rgba(169,169,169,0.25);
-  z-index: -1;
-  border-radius: 15px;
-  left: -10%;
-  transform: none;
-}
-  
 .contact-cta {
   text-align: center;
   margin: 50px 0 40px;
@@ -643,33 +594,7 @@ h2 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
   line-height: 1;
 }
-
-  .pdf-title {
-    width: 100%;
-    text-align: center;
-    font-size: 1.6em;
-    font-family: 'Kiwi Maru', cursive;
-    color: #8b8484;
-    position: relative;
-    display: block;
-    margin-top: 70px;
-    margin-bottom: 15px;
-    font-weight: 300;
-    transform: translateX(-10px);
-}
-
-.pdf-title::before {
-  content: "";
-  position: absolute;
-  left: -35px;
-  bottom: 6px;
-  width: 100%;
-  height: 0.6em;
-  background: rgba(169,169,169,0.25);
-  z-index: -1;
-  border-radius: 8px;
-}
-
+  
 .pdf-link {
   display: inline-block;
   padding: 12px 20px;
@@ -885,7 +810,7 @@ footer {
       </div>
     </div>
 
-<h2 class="access-title" id="access">アクセス</h2>
+<h2 class="pc-title" id="access">アクセス</h2>
 <section class="access-section">
   <p class="access-text">
   <span class="zip">〒950-0861</span><br>
@@ -902,7 +827,7 @@ footer {
   </div>
 </section>
 
-<h2 class="contact-title toggle-title" id="contact">
+<h2 class="pc-title toggle-title" id="contact">
   お問い合わせ
 </h2>
 
@@ -916,7 +841,7 @@ footer {
   </iframe>
 </section>
 
-<h2 class="pc-title pc-only" id="pdf">自己評価</h2>
+<h2 class="pc-title" id="pdf">自己評価</h2>
 
 <button class="toggle-button料金 sp-only" onclick="toggleContentSelf()">
   自己評価
