--- a/index.html
+++ b/index.html
@@ -97,7 +97,18 @@ h2 {
   color: #fff;
   cursor: pointer;
 }
+/* ================= 小さめPC ================= */
+@media (max-width: 1024px) {
+  .header-center {
+    font-size: 1.4em;
+    white-space: normal; /* 改行OKに */
+    text-align: center;
+  }
 
+  .header-inner {
+    column-gap: 20px;
+  }
+}
 /* ================= スマホ ================= */
 @media (max-width: 480px) {
 
