--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@ h2 {
   overflow: hidden;                 /* はみ出し防止 */
   background: rgba(255,255,255,0);
   position: relative;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
   /* 表示切り替え */
