--- a/index.html
+++ b/index.html
@@ -387,6 +387,20 @@ h2 {
   transform: none;
 }
 
+@media (max-width: 1100px) {
+
+  .pc-title::before,
+  .access-title::before,
+  .contact-title::before {
+    width: 90%;
+  }
+
+  .pc-title {
+    font-size: 1.4em;
+  }
+}
+  
+
 /* ===============================
    スマホだけトグル化
 =============================== */
