--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h2 {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
-  column-gap: 40px;
+  column-gap: clamp(12px, 4vw, 40px);
 }
 
 /* ロゴ・メニュー文字 */
