--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h2 {
   max-width: 1100px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: minmax(0, 1fr) auto;
+  grid-template-columns: auto 1fr auto;
   align-items: center;
   column-gap: clamp(12px, 4vw, 40px);
 }
@@ -80,6 +80,7 @@ h2 {
 @media (max-width: 1024px) {
   .header-inner {
     column-gap: 20px;
+    grid-template-columns: minmax(0, 1fr) auto;
   }
 }
   
@@ -87,10 +88,11 @@ h2 {
 .menu {
   display: flex;               /* ← PCでは横並び */
   justify-content: flex-end;
+  gap: 20px;
 }
 
 .menu a {
-  margin-left: 20px;
+  margin-left: 0;
   text-decoration: none;
     font-size: clamp(0.7rem, 2vw, 1rem);
 }
