--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ h2 {
 .menu a {
   margin-left: 0;
   text-decoration: none;
-    font-size: clamp(0.7rem, 2vw, 1rem);
+  font-size: clamp(0.7rem, 2vw, 1rem);
+    white-space: nowrap;
 }
 
 .menu a:hover {
