--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ h2 {
 }
   
 .contact-form {
-  display: none;
+  display: block;
   max-width: 900px;
   margin: 0 auto 80px;
   padding: 0 20px;
