--- a/index.html
+++ b/index.html
@@ -917,32 +917,35 @@ footer {
   </iframe>
 </section>
 
-<h2 class="pc-title" id="pdf">自己評価</h2>
+<h2 class="pc-title" id="pdf">サービス自己評価表</h2>
 
 <button class="toggle-button料金 sp-only" onclick="toggleContentSelf()">
-  自己評価
+  自己評価一覧
   <span class="arrow料金">∨</span>
 </button>
 
 <div id="self-content" class="content料金">
   <div class="pdf-section self-buttons">
 
-    <a href="自己評価_2023.pdf" target="_blank" class="pdf-link">
-      2023年度 自己評価
+    <a href="事業所(放デイ).pdf" target="_blank" class="pdf-link">
+      事業所における自己評価結果（児童発達支援）
     </a>
 
-    <a href="自己評価_2024.pdf" target="_blank" class="pdf-link">
-      2024年度 自己評価
+    <a href="事業所(児発).pdf" target="_blank" class="pdf-link">
+      保護者等からの事業所評価の集計結果（児童発達支援）
     </a>
 
-    <a href="自己評価_2025.pdf" target="_blank" class="pdf-link">
-      2025年度 自己評価
+    <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
+      事業所における自己評価結果（放課後等デイサービス）
     </a>
 
-    <a href="自己評価_2026.pdf" target="_blank" class="pdf-link">
-      2026年度 自己評価
+    <a href="保護者(児発).pdf" target="_blank" class="pdf-link">
+      保護者等からの事業所評価の集計結果（放課後等デイサービス）
     </a>
 
+    <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
+      支援プログラム
+    </a>
     
   </div>
 </div>
