--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ h2 {
   max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   
   font-size: clamp(1.1rem, 3vw, 1.8rem);
 }
