Update text formatting in index.html links

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ footer {
   <div class="pdf-section self-buttons">
 
     <a href="事業所(放デイ).pdf" target="_blank" class="pdf-link">
-      事業所における自己評価結果（児童発達支援）
+      事業所における<br>自己評価結果<br>（児童発達支援）
     </a>
 
     <a href="事業所(児発).pdf" target="_blank" class="pdf-link">
@@ -944,7 +944,7 @@ footer {
     </a>
 
     <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
-      支援プログラム
+      支援<br>プログラム
     </a>
     
   </div>
