--- a/index.html
+++ b/index.html
@@ -928,19 +928,19 @@ footer {
   <div class="pdf-section self-buttons">
 
     <a href="事業所(放デイ).pdf" target="_blank" class="pdf-link">
-      事業所における<br>自己評価結果<br>（児童発達支援）
+      事業所における<br>自己評価結果<br>(児童発達支援)
     </a>
 
     <a href="事業所(児発).pdf" target="_blank" class="pdf-link">
-      保護者等からの事業所評価の集計結果（児童発達支援）
+      保護者等からの事業所評価の集計結果(児童発達支援)
     </a>
 
     <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
-      事業所における自己評価結果（放課後等デイサービス）
+      事業所における自己評価結果(放課後等デイサービス)
     </a>
 
     <a href="保護者(児発).pdf" target="_blank" class="pdf-link">
-      保護者等からの事業所評価の集計結果（放課後等デイサービス）
+      保護者等からの事業所評価の集計結果(放課後等デイサービス)
     </a>
 
     <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
