Update link text for evaluation results in index.html

--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ footer {
     </a>
 
     <a href="事業所(児発).pdf" target="_blank" class="pdf-link">
-      保護者等からの事業所評価の集計結果(児童発達支援)
+      保護者等からの<br>事業所評価の<br>集計結果<br>(児童発達支援)
     </a>
 
     <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
