--- a/index.html
+++ b/index.html
@@ -936,15 +936,15 @@ footer {
     </a>
 
     <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
-      事業所における自己評価結果(放課後等デイサービス)
+      事業所における<br>自己評価結果<br>(放課後等デイサービス)
     </a>
 
     <a href="保護者(児発).pdf" target="_blank" class="pdf-link">
-      保護者等からの事業所評価の集計結果(放課後等デイサービス)
+      保護者等からの<br>事業所評価の<br>集計結果<br>(放課後等デイサービス)
     </a>
 
     <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
-      支援<br>プログラム
+      支援プログラム
     </a>
     
   </div>
