--- a/index.html
+++ b/index.html
@@ -667,6 +667,11 @@ h2 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
   line-height: 1.5;
 }
+
+  .pdf-link .pdf-small {
+  font-size: 0.7em;   /* ← ここで調整 */
+  opacity: 0.85;      /* 少し控えめに（お好み） */
+}
   
 .pdf-link {
   display: inline-block;
@@ -935,9 +940,10 @@ footer {
       保護者等からの<br>事業所評価の<br>集計結果<br>(児童発達支援)
     </a>
 
-    <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
-      事業所における<br>自己評価結果<br>(放課後等デイサービス)
-    </a>
+　　<a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
+  　　事業所における<br>自己評価結果
+ 　　 <span class="pdf-small">(放課後等デイサービス)</span>
+　　</a>
 
     <a href="保護者(児発).pdf" target="_blank" class="pdf-link">
       保護者等からの<br>事業所評価の<br>集計結果<br>(放課後等デイサービス)
