Add flex-direction column to CSS styles

--- a/index.html
+++ b/index.html
@@ -719,6 +719,7 @@ h2 {
   color: #9F987D;
   text-decoration: none;
   text-align: center;
+  flex-direction: column;  
 
   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
 }
