--- a/index.html
+++ b/index.html
@@ -720,6 +720,9 @@ h2 {
   text-decoration: none;
   text-align: center;
   flex-direction: column;  
+  display: flex;
+  text-align: center;   /* 文字中央 */
+  line-height: 1.2;
 
   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
 }
