--- a/index.html
+++ b/index.html
@@ -708,13 +708,10 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-
   aspect-ratio: 1 / 1;   /* ← 正方形の決め手 */
   width: 110px;
-
   background: #ffffff;
   border-radius: 16px;
-
   font-size: 0.9em;
   color: #9F987D;
   text-decoration: none;
@@ -723,8 +720,8 @@ h2 {
   display: flex;
   text-align: center;   /* 文字中央 */
   line-height: 1.2;
-
   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    margin: 0 auto;  
 }
 
   .self-buttons .pdf-link:active {
