--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@ h2 {
   justify-content: center;
   margin: 0 auto;
   max-width: none;  
+  font-size:14px;
 
   .self-buttons .pdf-link {
   display: flex;
