--- a/index.html
+++ b/index.html
@@ -697,9 +697,9 @@ h2 {
   
 .self-buttons {
   display: grid;
-  grid-template-columns: repeat(5, 110px);
+  grid-template-columns: repeat(auto-fit, 110px);
   gap: 14px;
-  justify-content: center;   /* ← 左ズレ防止 */
+  justify-content: center;
   margin: 0 auto;
 }
   
