--- a/index.html
+++ b/index.html
@@ -704,25 +704,20 @@ h2 {
 }
   
   .self-buttons .pdf-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  aspect-ratio: 1 / 1;   /* ← 正方形の決め手 */
-  width: 110px;
-  background: #ffffff;
-  border-radius: 16px;
-  font-size: 0.9em;
-  color: #9F987D;
-  text-decoration: none;
-  text-align: center;
-  flex-direction: column;  
-  display: flex;
-  text-align: center;   /* 文字中央 */
-  line-height: 1.2;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-    margin: 0 auto;
-    font-size:14px;
-  box-sizing: border-box;  
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   aspect-ratio: 1 / 1;
+   width: 110px;
+   background: #ffffff;
+   border-radius: 16px;
+   font-size: 14px;
+   color: #9F987D;
+   text-decoration: none;
+   text-align: center;
+   flex-direction: column;
+   line-height: 1.2;
+   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
 }
 
   .self-buttons .pdf-link:active {
