Change grid-template-columns to fixed 5 columns

--- a/index.html
+++ b/index.html
@@ -697,10 +697,9 @@ h2 {
   
 .self-buttons {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 110px);
+  grid-template-columns: repeat(5, 110px); /* ← PCは5個固定 */
   gap: 14px;
   justify-content: center;
-  margin: 0 auto;
 }
   
   .self-buttons .pdf-link {
