--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@ footer {
 
 <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
   事業所における<br>自己評価結果
-  <span class="pdf-small">(放課後等デイサービス)</span>
+  <span class="pdf-small">(放課後等<br> デイサービス)</span>
 </a>
 
 <a href="保護者(児発).pdf" target="_blank" class="pdf-link">
