--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ h2 {
 .self-buttons {
   display: grid;
   grid-template-columns: repeat(5, 110px); /* ← PCは5個固定 */
-  gap: 35px;
+  gap: 45px;
   justify-content: center;
 }
   
@@ -939,11 +939,12 @@ footer {
 
 <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
   事業所における<br>自己評価結果
-  <span class="pdf-small">(放課後等<br> デイサービス)</span>
+  <span class="pdf-small">(放課後等デイ<br>サービス)</span>
 </a>
 
 <a href="保護者(児発).pdf" target="_blank" class="pdf-link">
-  保護者等からの<br>事業所評価の<br>集計結果<br>(放課後等デイサービス)
+  保護者等からの<br>事業所評価の<br>集計結果<br>
+  <span class="pdf-small">(放課後等デイ<br>サービス)</span>
 </a>
 
 <a href="支援プログラム.pdf" target="_blank" class="pdf-link">
