--- a/index.html
+++ b/index.html
@@ -931,12 +931,12 @@ footer {
 
     <a href="事業所(放デイ).pdf" target="_blank" class="pdf-link">
   事業所における<br>自己評価結果<br>
-      <span class="pdf-small">(児童発達支援4)</span>
+      <span class="pdf-small">(児童発達支援)</span>
 </a>
 
 <a href="事業所(児発).pdf" target="_blank" class="pdf-link">
   保護者等からの<br>事業所評価の<br>集計結果<br>
-  <span class="pdf-small">(児童発達支援4)</span>
+  <span class="pdf-small">(児童発達支援)</span>
 </a>
 
 <a href="保護者(放デイ).pdf" target="_blank" class="pdf-link">
