--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ h2 {
   letter-spacing: 0.15em;
   text-shadow: 0 2px 6px rgba(0,0,0,0.35);
   max-width: 100%;
-  overflow: hidden;
+  overflow: visible;
   white-space: nowrap;
   
   font-size: clamp(1.1rem, 3vw, 1.8rem);
